--- a/index.html
+++ b/index.html
@@ -44,13 +44,23 @@
         <!-- Для связи -->
         <ul class="contacts list">
           <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="contacts-link" href="mailto:info@devstudio.com">
+              <svg class="contacts-icon" width="16" height="12">
+                <use
+                  href="../images/background/symbol-defs.svg#icon-envelope"
+                ></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="contacts-item">
-            <a class="contacts-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+            <a class="contacts-link" href="tel:+380961111111">
+              <svg class="contacts-icon" width="10" height="16">
+                <use
+                  href="../images/background/symbol-defs.svg#icon-smartphone"
+                ></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -72,6 +82,13 @@
           <h2 class="visually-hidden">Наши приемущества</h2>
           <ul class="list grid">
             <li class="grid-item">
+              <div class="description-icon">
+                <svg class="icon">
+                  <use
+                    href="./images/background/symbol-defs.svg#icon-antenna-1"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Внимание к деталям</h3>
               <p class="text-description">
                 Идейные соображения, а также начало повседневной работы по
@@ -80,6 +97,13 @@
             </li>
 
             <li class="grid-item">
+              <div class="description-icon">
+                <svg class="icon">
+                  <use
+                    href="./images/background/symbol-defs.svg#icon-clock-1"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Пунктуальность</h3>
               <p class="text-description">
                 Задача организации, в особенности же рамки и место обучения
@@ -88,6 +112,13 @@
             </li>
 
             <li class="grid-item">
+              <div class="description-icon">
+                <svg class="icon">
+                  <use
+                    href="./images/background/symbol-defs.svg#icon-diagram-1"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Планирование</h3>
               <p class="text-description">
                 Равным образом консультация с широким активом в значительной
@@ -96,6 +127,13 @@
             </li>
 
             <li class="grid-item">
+              <div class="description-icon">
+                <svg class="icon">
+                  <use
+                    href="./images/background/symbol-defs.svg#icon-astronaut-1"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Современные технологии</h3>
               <p class="text-description">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -155,6 +193,47 @@
                 <h3 class="team-subject">Игорь Демьяненко</h3>
                 <p class="team-member" lang="en">Product Designer</p>
               </div>
+              <ul class="networks list">
+                <li class="networks-item">
+                  <a class="networks-link" href="/">
+                    <svg class="networks-icon">
+                      <use
+                        href="../images/background/symbol-defs.svg#icon-instagram-2"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="networks-item">
+                  <a class="networks-link" href="/">
+                    <svg class="networks-icon">
+                      <use
+                        href="../images/background/symbol-defs.svg#icon-twitter-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="networks-item">
+                  <a class="networks-link" href="/">
+                    <svg class="networks-icon">
+                      <use
+                        href="../images/background/symbol-defs.svg#icon-facebook-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="networks-item">
+                  <a class="networks-link" href="/">
+                    <svg class="networks-icon">
+                      <use
+                        href="../images/background/symbol-defs.svg#icon-linkedin-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
 
             <li class="team-item grid-item">
@@ -168,6 +247,47 @@
                 <h3 class="team-subject">Ольга Репина</h3>
                 <p class="team-member" lang="en">Frontend Developer</p>
               </div>
+              <ul class="networks list">
+                <li class="networks-item">
+                  <a class="networks-link" href="/">
+                    <svg class="networks-icon">
+                      <use
+                        href="../images/background/symbol-defs.svg#icon-instagram-2"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="networks-item">
+                  <a class="networks-link" href="/">
+                    <svg class="networks-icon">
+                      <use
+                        href="../images/background/symbol-defs.svg#icon-twitter-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="networks-item">
+                  <a class="networks-link" href="/">
+                    <svg class="networks-icon">
+                      <use
+                        href="../images/background/symbol-defs.svg#icon-facebook-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="networks-item">
+                  <a class="networks-link" href="/">
+                    <svg class="networks-icon">
+                      <use
+                        href="../images/background/symbol-defs.svg#icon-linkedin-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
 
             <li class="team-item grid-item">
@@ -181,6 +301,47 @@
                 <h3 class="team-subject">Николай Тарасов</h3>
                 <p class="team-member" lang="en">Marketing</p>
               </div>
+              <ul class="networks list">
+                <li class="networks-item">
+                  <a class="networks-link" href="/">
+                    <svg class="networks-icon">
+                      <use
+                        href="../images/background/symbol-defs.svg#icon-instagram-2"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="networks-item">
+                  <a class="networks-link" href="/">
+                    <svg class="networks-icon">
+                      <use
+                        href="../images/background/symbol-defs.svg#icon-twitter-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="networks-item">
+                  <a class="networks-link" href="/">
+                    <svg class="networks-icon">
+                      <use
+                        href="../images/background/symbol-defs.svg#icon-facebook-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="networks-item">
+                  <a class="networks-link" href="/">
+                    <svg class="networks-icon">
+                      <use
+                        href="../images/background/symbol-defs.svg#icon-linkedin-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
 
             <li class="team-item grid-item">
@@ -194,9 +355,64 @@
                 <h3 class="team-subject">Михаил Ермаков</h3>
                 <p class="team-member" lang="en">UI Designer</p>
               </div>
+              <ul class="networks list">
+                <li class="networks-item">
+                  <a class="networks-link" href="/">
+                    <svg class="networks-icon">
+                      <use
+                        href="../images/background/symbol-defs.svg#icon-instagram-2"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="networks-item">
+                  <a class="networks-link" href="/">
+                    <svg class="networks-icon">
+                      <use
+                        href="../images/background/symbol-defs.svg#icon-twitter-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="networks-item">
+                  <a class="networks-link" href="/">
+                    <svg class="networks-icon">
+                      <use
+                        href="../images/background/symbol-defs.svg#icon-facebook-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="networks-item">
+                  <a class="networks-link" href="/">
+                    <svg class="networks-icon">
+                      <use
+                        href="../images/background/symbol-defs.svg#icon-linkedin-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
+      </section>
+      <section>
+        <h2>Постоянные клиенты</h2>
+        <ul>
+          <li>
+            <a href="/">
+              <svg>
+                <use
+                  href="../images/background/symbol-defs.svg#icon-logo-1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
     <!-- Подвал страницы -->
