--- a/portfolio.html
+++ b/portfolio.html
@@ -45,13 +45,23 @@
         <!-- Для связи -->
         <ul class="contacts list">
           <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="contacts-link" href="mailto:info@devstudio.com">
+              <svg class="contacts-icon" width="16" height="12">
+                <use
+                  href="../images/background/symbol-defs.svg#icon-envelope"
+                ></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="contacts-item">
-            <a class="contacts-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+            <a class="contacts-link" href="tel:+380961111111">
+              <svg class="contacts-icon" width="10" height="16">
+                <use
+                  href="../images/background/symbol-defs.svg#icon-smartphone"
+                ></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
