Добавляет aria-labek

--- a/index.html
+++ b/index.html
@@ -191,7 +191,12 @@
               </div>
               <ul class="networks list">
                 <li class="networks-item">
-                  <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <a
+                    class="networks-link"
+                    href="/"
+                    rel="noreferrer noopener"
+                    aria-label="instagram"
+                  >
                     <svg class="networks-icon">
                       <use
                         href="../images/background/icons.svg#icon-instagram-2"
@@ -201,7 +206,12 @@
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <a
+                    class="networks-link"
+                    href="/"
+                    rel="noreferrer noopener"
+                    aria-label="twitter"
+                  >
                     <svg class="networks-icon">
                       <use
                         href="../images/background/icons.svg#icon-twitter-1"
@@ -211,7 +221,12 @@
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <a
+                    class="networks-link"
+                    href="/"
+                    rel="noreferrer noopener"
+                    aria-label="facebook"
+                  >
                     <svg class="networks-icon">
                       <use
                         href="../images/background/icons.svg#icon-facebook-1"
@@ -221,7 +236,12 @@
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <a
+                    class="networks-link"
+                    href="/"
+                    rel="noreferrer noopener"
+                    aria-label="linkedin"
+                  >
                     <svg class="networks-icon">
                       <use
                         href="../images/background/icons.svg#icon-linkedin-1"
@@ -245,7 +265,12 @@
               </div>
               <ul class="networks list">
                 <li class="networks-item">
-                  <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <a
+                    class="networks-link"
+                    href="/"
+                    rel="noreferrer noopener"
+                    aria-label="instagram"
+                  >
                     <svg class="networks-icon">
                       <use
                         href="../images/background/icons.svg#icon-instagram-2"
@@ -255,7 +280,12 @@
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <a
+                    class="networks-link"
+                    href="/"
+                    rel="noreferrer noopener"
+                    aria-label="twitter"
+                  >
                     <svg class="networks-icon">
                       <use
                         href="../images/background/icons.svg#icon-twitter-1"
@@ -265,7 +295,12 @@
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <a
+                    class="networks-link"
+                    href="/"
+                    rel="noreferrer noopener"
+                    aria-label="facebook"
+                  >
                     <svg class="networks-icon">
                       <use
                         href="../images/background/icons.svg#icon-facebook-1"
@@ -275,7 +310,12 @@
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <a
+                    class="networks-link"
+                    href="/"
+                    rel="noreferrer noopener"
+                    aria-label="linkedin"
+                  >
                     <svg class="networks-icon">
                       <use
                         href="../images/background/icons.svg#icon-linkedin-1"
@@ -299,7 +339,12 @@
               </div>
               <ul class="networks list">
                 <li class="networks-item">
-                  <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <a
+                    class="networks-link"
+                    href="/"
+                    rel="noreferrer noopener"
+                    aria-label="instagram"
+                  >
                     <svg class="networks-icon">
                       <use
                         href="../images/background/icons.svg#icon-instagram-2"
@@ -309,7 +354,12 @@
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <a
+                    class="networks-link"
+                    href="/"
+                    rel="noreferrer noopener"
+                    aria-label="twitter"
+                  >
                     <svg class="networks-icon">
                       <use
                         href="../images/background/icons.svg#icon-twitter-1"
@@ -319,7 +369,12 @@
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <a
+                    class="networks-link"
+                    href="/"
+                    rel="noreferrer noopener"
+                    aria-label="facebook"
+                  >
                     <svg class="networks-icon">
                       <use
                         href="../images/background/icons.svg#icon-facebook-1"
@@ -329,7 +384,12 @@
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <a
+                    class="networks-link"
+                    href="/"
+                    rel="noreferrer noopener"
+                    aria-label="linkedin"
+                  >
                     <svg class="networks-icon">
                       <use
                         href="../images/background/icons.svg#icon-linkedin-1"
@@ -353,7 +413,12 @@
               </div>
               <ul class="networks list">
                 <li class="networks-item">
-                  <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <a
+                    class="networks-link"
+                    href="/"
+                    rel="noreferrer noopener"
+                    aria-label="instagram"
+                  >
                     <svg class="networks-icon">
                       <use
                         href="../images/background/icons.svg#icon-instagram-2"
@@ -363,7 +428,12 @@
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <a
+                    class="networks-link"
+                    href="/"
+                    rel="noreferrer noopener"
+                    aria-label="twitter"
+                  >
                     <svg class="networks-icon">
                       <use
                         href="../images/background/icons.svg#icon-twitter-1"
@@ -373,7 +443,12 @@
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <a
+                    class="networks-link"
+                    href="/"
+                    rel="noreferrer noopener"
+                    aria-label="facebook"
+                  >
                     <svg class="networks-icon">
                       <use
                         href="../images/background/icons.svg#icon-facebook-1"
@@ -383,7 +458,12 @@
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <a
+                    class="networks-link"
+                    href="/"
+                    rel="noreferrer noopener"
+                    aria-label="linkedin"
+                  >
                     <svg class="networks-icon">
                       <use
                         href="../images/background/icons.svg#icon-linkedin-1"
@@ -471,7 +551,7 @@
             <h2 class="footer-networks-title">присоединяйтесь</h2>
             <ul class="networks list">
               <li class="networks-item">
-                <a class="networks-link" href="/">
+                <a class="networks-link" href="/" aria-label="instagram">
                   <svg class="networks-icon">
                     <use
                       href="../images/background/icons.svg#icon-instagram-2"
@@ -481,7 +561,12 @@
               </li>
 
               <li class="networks-item">
-                <a class="networks-link" href="/" rel="noreferrer noopener">
+                <a
+                  class="networks-link"
+                  href="/"
+                  rel="noreferrer noopener"
+                  aria-label="twitter"
+                >
                   <svg class="networks-icon">
                     <use
                       href="../images/background/icons.svg#icon-twitter-1"
@@ -491,7 +576,12 @@
               </li>
 
               <li class="networks-item">
-                <a class="networks-link" href="/" rel="noreferrer noopener">
+                <a
+                  class="networks-link"
+                  href="/"
+                  rel="noreferrer noopener"
+                  aria-label="facebook"
+                >
                   <svg class="networks-icon">
                     <use
                       href="../images/background/icons.svg#icon-facebook-1"
@@ -501,7 +591,12 @@
               </li>
 
               <li class="networks-item">
-                <a class="networks-link" href="/" rel="noreferrer noopener">
+                <a
+                  class="networks-link"
+                  href="/"
+                  rel="noreferrer noopener"
+                  aria-label="linkedin"
+                >
                   <svg class="networks-icon">
                     <use
                       href="../images/background/icons.svg#icon-linkedin-1"
