--- a/portfolio.html
+++ b/portfolio.html
@@ -281,7 +281,12 @@
             <h2 class="footer-networks-title">присоединяйтесь</h2>
             <ul class="networks list">
               <li class="networks-item">
-                <a class="networks-link" href="/" rel="noreferrer noopener">
+                <a
+                  class="networks-link"
+                  href="/"
+                  rel="noreferrer noopener"
+                  aria-label="instagram"
+                >
                   <svg class="networks-icon">
                     <use
                       href="../images/background/icons.svg#icon-instagram-2"
@@ -291,7 +296,12 @@
               </li>
 
               <li class="networks-item">
-                <a class="networks-link" href="/" rel="noreferrer noopener">
+                <a
+                  class="networks-link"
+                  href="/"
+                  rel="noreferrer noopener"
+                  aria-label="twitter"
+                >
                   <svg class="networks-icon">
                     <use
                       href="../images/background/icons.svg#icon-twitter-1"
@@ -301,7 +311,12 @@
               </li>
 
               <li class="networks-item">
-                <a class="networks-link" href="/" rel="noreferrer noopener">
+                <a
+                  class="networks-link"
+                  href="/"
+                  rel="noreferrer noopener"
+                  aria-label="facebook"
+                >
                   <svg class="networks-icon">
                     <use
                       href="../images/background/icons.svg#icon-facebook-1"
@@ -311,7 +326,12 @@
               </li>
 
               <li class="networks-item">
-                <a class="networks-link" href="/" rel="noreferrer noopener">
+                <a
+                  class="networks-link"
+                  href="/"
+                  rel="noreferrer noopener"
+                  aria-label="linkedin"
+                >
                   <svg class="networks-icon">
                     <use
                       href="../images/background/icons.svg#icon-linkedin-1"
