--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li class="contacts-item">
             <a class="contacts-link" href="mailto:info@devstudio.com">
               <svg class="contacts-icon" width="16" height="12">
-                <use href="../images/background/icons.svg#icon-envelope"></use>
+                <use href="./images/background/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -54,9 +54,7 @@
           <li class="contacts-item">
             <a class="contacts-link" href="tel:+380961111111">
               <svg class="contacts-icon" width="10" height="16">
-                <use
-                  href="../images/background/icons.svg#icon-smartphone"
-                ></use>
+                <use href="./images/background/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -199,7 +197,7 @@
                   >
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/icons.svg#icon-instagram-2"
+                        href="./images/background/icons.svg#icon-instagram-2"
                       ></use>
                     </svg>
                   </a>
@@ -214,7 +212,7 @@
                   >
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/icons.svg#icon-twitter-1"
+                        href="./images/background/icons.svg#icon-twitter-1"
                       ></use>
                     </svg>
                   </a>
@@ -229,7 +227,7 @@
                   >
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/icons.svg#icon-facebook-1"
+                        href="./images/background/icons.svg#icon-facebook-1"
                       ></use>
                     </svg>
                   </a>
@@ -244,7 +242,7 @@
                   >
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/icons.svg#icon-linkedin-1"
+                        href="./images/background/icons.svg#icon-linkedin-1"
                       ></use>
                     </svg>
                   </a>
@@ -273,7 +271,7 @@
                   >
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/icons.svg#icon-instagram-2"
+                        href="./images/background/icons.svg#icon-instagram-2"
                       ></use>
                     </svg>
                   </a>
@@ -288,7 +286,7 @@
                   >
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/icons.svg#icon-twitter-1"
+                        href="./images/background/icons.svg#icon-twitter-1"
                       ></use>
                     </svg>
                   </a>
@@ -303,7 +301,7 @@
                   >
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/icons.svg#icon-facebook-1"
+                        href="./images/background/icons.svg#icon-facebook-1"
                       ></use>
                     </svg>
                   </a>
@@ -318,7 +316,7 @@
                   >
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/icons.svg#icon-linkedin-1"
+                        href="./images/background/icons.svg#icon-linkedin-1"
                       ></use>
                     </svg>
                   </a>
@@ -347,7 +345,7 @@
                   >
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/icons.svg#icon-instagram-2"
+                        href="./images/background/icons.svg#icon-instagram-2"
                       ></use>
                     </svg>
                   </a>
@@ -362,7 +360,7 @@
                   >
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/icons.svg#icon-twitter-1"
+                        href="./images/background/icons.svg#icon-twitter-1"
                       ></use>
                     </svg>
                   </a>
@@ -377,7 +375,7 @@
                   >
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/icons.svg#icon-facebook-1"
+                        href="./images/background/icons.svg#icon-facebook-1"
                       ></use>
                     </svg>
                   </a>
@@ -392,7 +390,7 @@
                   >
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/icons.svg#icon-linkedin-1"
+                        href="./images/background/icons.svg#icon-linkedin-1"
                       ></use>
                     </svg>
                   </a>
@@ -421,7 +419,7 @@
                   >
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/icons.svg#icon-instagram-2"
+                        href="./images/background/icons.svg#icon-instagram-2"
                       ></use>
                     </svg>
                   </a>
@@ -436,7 +434,7 @@
                   >
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/icons.svg#icon-twitter-1"
+                        href="./images/background/icons.svg#icon-twitter-1"
                       ></use>
                     </svg>
                   </a>
@@ -451,7 +449,7 @@
                   >
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/icons.svg#icon-facebook-1"
+                        href="./images/background/icons.svg#icon-facebook-1"
                       ></use>
                     </svg>
                   </a>
@@ -466,7 +464,7 @@
                   >
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/icons.svg#icon-linkedin-1"
+                        href="./images/background/icons.svg#icon-linkedin-1"
                       ></use>
                     </svg>
                   </a>
@@ -484,42 +482,42 @@
             <li class="clients-item">
               <a class="clients-link" href="/" rel="noreferrer noopener">
                 <svg class="clients-icon" width="44" height="49">
-                  <use href="../images/background/icons.svg#icon-logo-1"></use>
+                  <use href="./images/background/icons.svg#icon-logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="/" rel="noreferrer noopener">
                 <svg class="clients-icon" width="40" height="52">
-                  <use href="../images/background/icons.svg#icon-logo-2"></use>
+                  <use href="./images/background/icons.svg#icon-logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="/" rel="noreferrer noopener">
                 <svg class="clients-icon" width="41" height="43">
-                  <use href="../images/background/icons.svg#icon-logo-3"></use>
+                  <use href="./images/background/icons.svg#icon-logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="/" rel="noreferrer noopener">
                 <svg class="clients-icon" width="80 " height="42">
-                  <use href="../images/background/icons.svg#icon-logo-4"></use>
+                  <use href="./images/background/icons.svg#icon-logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="/" rel="noreferrer noopener">
                 <svg class="clients-icon" width="59" height="47">
-                  <use href="../images/background/icons.svg#icon-logo-5"></use>
+                  <use href="./images/background/icons.svg#icon-logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="/" rel="noreferrer noopener">
                 <svg class="clients-icon" width="88" height="45">
-                  <use href="../images/background/icons.svg#icon-logo-6"></use>
+                  <use href="./images/background/icons.svg#icon-logo-6"></use>
                 </svg>
               </a>
             </li>
@@ -554,7 +552,7 @@
                 <a class="networks-link" href="/" aria-label="instagram">
                   <svg class="networks-icon">
                     <use
-                      href="../images/background/icons.svg#icon-instagram-2"
+                      href="./images/background/icons.svg#icon-instagram-2"
                     ></use>
                   </svg>
                 </a>
@@ -569,7 +567,7 @@
                 >
                   <svg class="networks-icon">
                     <use
-                      href="../images/background/icons.svg#icon-twitter-1"
+                      href="./images/background/icons.svg#icon-twitter-1"
                     ></use>
                   </svg>
                 </a>
@@ -584,7 +582,7 @@
                 >
                   <svg class="networks-icon">
                     <use
-                      href="../images/background/icons.svg#icon-facebook-1"
+                      href="./images/background/icons.svg#icon-facebook-1"
                     ></use>
                   </svg>
                 </a>
@@ -599,7 +597,7 @@
                 >
                   <svg class="networks-icon">
                     <use
-                      href="../images/background/icons.svg#icon-linkedin-1"
+                      href="./images/background/icons.svg#icon-linkedin-1"
                     ></use>
                   </svg>
                 </a>
