--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
           <li class="contacts-item">
             <a class="contacts-link" href="mailto:info@devstudio.com">
               <svg class="contacts-icon" width="16" height="12">
-                <use href="../images/background/icons.svg#icon-envelope"></use>
+                <use href="./images/background/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -55,9 +55,7 @@
           <li class="contacts-item">
             <a class="contacts-link" href="tel:+380961111111">
               <svg class="contacts-icon" width="10" height="16">
-                <use
-                  href="../images/background/icons.svg#icon-smartphone"
-                ></use>
+                <use href="./images/background/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -289,7 +287,7 @@
                 >
                   <svg class="networks-icon">
                     <use
-                      href="../images/background/icons.svg#icon-instagram-2"
+                      href="./images/background/icons.svg#icon-instagram-2"
                     ></use>
                   </svg>
                 </a>
@@ -304,7 +302,7 @@
                 >
                   <svg class="networks-icon">
                     <use
-                      href="../images/background/icons.svg#icon-twitter-1"
+                      href="./images/background/icons.svg#icon-twitter-1"
                     ></use>
                   </svg>
                 </a>
@@ -319,7 +317,7 @@
                 >
                   <svg class="networks-icon">
                     <use
-                      href="../images/background/icons.svg#icon-facebook-1"
+                      href="./images/background/icons.svg#icon-facebook-1"
                     ></use>
                   </svg>
                 </a>
@@ -334,7 +332,7 @@
                 >
                   <svg class="networks-icon">
                     <use
-                      href="../images/background/icons.svg#icon-linkedin-1"
+                      href="./images/background/icons.svg#icon-linkedin-1"
                     ></use>
                   </svg>
                 </a>
